<resources>
    <string name="app_name">MotoApp</string>
    <string name="accion_cerrar_sesion">Cerrar sesion</string>
    <string name="completar_registro">Completar registro</string>
    <string name="nombre">Nombre:</string>
    <string name="celular">Celular:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="correo">Correo:</string>
    <string name="amigo_nombre">Nombre: %1$s</string>
    <string name="amigo_celular">Celular: %1$s</string>
    <string name="amigo_ciudad">Ciudad: %1$s</string>
    <string name="amigo_correo">Correo: %1$s</string>
    <string name="tab_principal_rutas">Rutas</string>
    <string name="tab_principal_inicio">Inicio</string>
    <string name="tab_principal_amigos">Amigos</string>
    <string name="buscar_amigos">Buscar amigos</string>
    <string name="agregar_amigo">Agregar</string>
    <string name="resultado_busqueda_nuevo_amigo">Encontramos %1$d moteros con tu busqueda</string>
    <string name="resultado_busqueda_solicitudes">Tienes %1$d solicitudes de amistad</string>
    <string name="resultado_busqueda_invitaciones_ruta">Tienes %1$d invitaciones de rutas</string>
    <string name="resultado_busqueda_rutas_privadas">Tienes %1$d rutas por recorrer</string>
    <string name="tipo_solicitud">solicitud</string>
    <string name="tipo_aceptacion">aceptacion</string>
    <string name="revisar">Revisar</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar_amigo">Rechazar</string>
    <string name="title_activity_mapa_rutas_publicas">Expora nuevas rutas</string>
    <string name="default_web_client_id" translatable="false">
        275475136526-jvm4eagbab3qc4ahhpqvkc2m44mok5et.apps.googleusercontent.com
    </string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyCtgyGccjWXg12pr7PUJInduBKDMPk4Rmc
    </string>
    <string name="nombre_ruta">Nombre de la Ruta</string>
    <string name="descripcion_ruta">Descripción:</string>

    <string name="experiencia_ruta">Experiencia: %1$d</string>
    <string name="distancia_ruta">Distancia: %1$d Km</string>
    <string name="dificultad_ruta">Dificultad: %1$s</string>
    <string name="calificacion_ruta">Calificacion: %1$s</string>
    <string name="agregar_ruta_publica">Agregar a mis rutas</string>
    <string name="texto_estado_ruta_privada">Estado: %1$s</string>


    <string name="action_settings">Settings</string>
    <string name="error_message_no_more_space">
        Your storage is unavailable.
    </string>
    <string name="error_message_insufficient_space">
        You have few space available, please make sure your have more than 5MB on disk to
        take pictures!
    </string>
    <string name="ok">OK</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app
        settings.
    </string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="url_androidwave">https://androidwave.com/</string>
    <string name="url_androidwave_android">https://androidwave.com/category/android/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_actividad_ruta_iniciada">MotoApp: %1$s</string>
    <string name="imagen_ruta">Imagen principal de la ruta</string>
    <string name="boton_mapa_ruta_mostrar">Mostrar mapa</string>
    <string name="boton_mapa_ruta_ocultar">Ocultar mapa</string>
    <string name="boton_iniciar_ruta">Iniciar ruta</string>
    <string name="boton_eliminar_ruta">Eliminar ruta</string>
    <string name="estado_ruta_mensaje_espera">Debes esperar a que los integrantes de la ruta inicien el viaje</string>
    <string name="boton_iniciar_ruta_invitado">Estoy aqui</string>
    <string name="boton_finalizar_ruta">Finalizar ruta</string>
</resources>
