<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="170dp" android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:cardCornerRadius="@dimen/appbar_padding_top"
            app:cardElevation="@dimen/fui_button_inset_right">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/imagen_amigo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@mipmap/ic_launcher_round" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/texto_celular_amigo"
                    app:layout_constraintEnd_toStartOf="@+id/texto_nombre_amigo"/>
            <TextView
                    android:text="@string/nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/texto_nombre_amigo"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@+id/imagen_amigo"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/texto_correo_amigo"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"/>
            <TextView
                    android:text="@string/correo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/texto_correo_amigo"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@+id/imagen_amigo"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/texto_celular_amigo"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/texto_nombre_amigo"
                    app:layout_constraintHorizontal_bias="0.1"/>
            <TextView
                    android:text="@string/celular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/texto_celular_amigo"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/texto_correo_amigo"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/texto_ciudad_amigo"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/ciudad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/texto_ciudad_amigo"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/texto_celular_amigo"
                    app:layout_constraintEnd_toStartOf="@+id/boton_rechazar_amigo" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <Button
                    android:id="@+id/boton_agregar_amigo"
                    android:text="@string/agregar_amigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/texto_celular_amigo" android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    android:visibility="invisible" app:layout_constraintStart_toEndOf="@+id/boton_rechazar_amigo"
                    app:layout_constraintVertical_bias="0.555"/>
            <Button
                    android:id="@+id/boton_rechazar_amigo"
                    android:text="@string/rechazar_amigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/boton_agregar_amigo"
                    app:layout_constraintStart_toEndOf="@+id/texto_ciudad_amigo"
                    android:visibility="invisible"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/texto_celular_amigo"
                    app:layout_constraintHorizontal_bias="1.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
